--- a/template/users/index.html.twig
+++ b/template/users/index.html.twig
@@ -5,7 +5,9 @@
 {% block content %}
     <ul class='list-group text-center col-5 ml-auto mr-auto'>
         {% for user in users %}
-            <li class='list-group-item border deep-purple-text'>{{user.firstname}} {{user.lastname}}</li>
+            <li class='list-group-item border deep-purple-text'>
+                <a href="{{env.base_path }}users/{{user.id}} " class='text-dark'>{{user.firstname}} {{user.lastname}}</a>
+            </li>
         {% endfor %}
     </ul>
 {% endblock %}
