--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <h1 class='container text-center purple darken-4 rounded col-4 text-white'>{% block h1 %}{% endblock %}</h1>
+    <h1 class='container text-center purple darken-4 rounded col-4 text-white'>{% block <title></title> %}{% endblock %}</h1>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
