--- a/template/users/form.html.twig
+++ b/template/users/form.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-Uilisateurs
+Utilisateurs
 {% endblock %}
 {% block content %}
 <form action="{{env.base_path  ~ '/users'}}" method="post">
