--- a/template/users/index.html.twig
+++ b/template/users/index.html.twig
@@ -11,6 +11,6 @@ Users
     {% endfor %}
 </ul>
 <div class="btn btn-deep-purple darken-4 rounded ">
-    <a href="{{ env.base_path ~ '/users/' ~ users.id ~ '/edit' }}" class="text-white">Add</a>
+    <a href="{{ env.base_path ~ '/users/new' }}" class="text-white">Add</a>
 </div>
 {% endblock %}
