--- a/template/users/show.html.twig
+++ b/template/users/show.html.twig
@@ -9,6 +9,6 @@
     <a href="{{ env.base_path ~ '/users/' ~ users.id ~ '/edit' }}" class="text-white">Update</a>
 </div>
 <div class="btn btn-primary rounded">
-    <a href="{{ env.base_path ~ '/users/' }}" class="text-white">Accueil</a>
+    <a href="{{ env.base_path ~ '/users/' }}" class="text-white">Home</a>
 </div>
 {% endblock %}
