--- a/template/users/form.html.twig
+++ b/template/users/form.html.twig
@@ -1,20 +1,34 @@
 {% extends 'base.html.twig' %}
+
 {% block title %}
-Utilisateurs
+Create a new car
 {% endblock %}
+
 {% block content %}
-<form action="{{env.base_path  ~ '/users'}}" method="post">
 
-    <div class="form-group">
-        <label class="FormBrand" for="firstname">Firstname</label>
-        <input name="Firstname" type="text">
-    </div>
-    <div class="form-group">
-        <label class="FormModel" for="lastname">Lastname</label>
-        <input name="Lastname" type="text">
-    </div>
+{% if users %}
+<form action="{{env.base_path ~ '/users/' ~ users.id ~ '/edit'}}" method="post">
+    {% else %}
+    <form action="{{env.base_path ~ '/users'}}" method="post">
+        {% endif %}
 
-    <button class="btn btn-success" type="reset">Envoie</button>
-</form>
 
-{% endblock %}
+        <div class="form-group">
+            <label for="formFirstname">Firstname</label>
+            <input name="firstname" id="formFirstname" type="text" class="form-control"
+                value="{{ users ? users.firstname : '' }}">
+        </div>
+        <div class="form-group">
+            <label for="formLastname">Lastname</label>
+            <input name="lastname" id="formLastname" type="text" class="form-control"
+                value="{{ users ? users.lastname : '' }}">
+        </div>
+
+        {% if users %}
+        <button type="submit" class="btn btn-warning">Edit the user</button>
+        {% else %}
+        <button type="submit" class="btn btn-primary">Create a user</button>
+        {% endif %}
+
+    </form>
+    {% endblock %}
