--- a/template/users/form.html.twig
+++ b/template/users/form.html.twig
@@ -25,7 +25,7 @@ Create a new car
         </div>
 
         {% if users %}
-        <button type="submit" class="btn btn-warning">Edit the user</button>
+        <button type="submit" class="btn btn-success rounded">Edit the user</button>
         {% else %}
         <button type="submit" class="btn btn-primary">Create a user</button>
         {% endif %}
