--- a/template/users/index.html.twig
+++ b/template/users/index.html.twig
@@ -7,7 +7,7 @@ Users
     {% for user in users %}
     <li class='list-group-item border deep-purple-text'>
         <a href="{{env.base_path }}users/{{user.id}} " class='text-dark'>{{user.firstname}} {{user.lastname}}</a>
-        <a href="{{env.base_path ~ 'users/' ~ user.id ~ '/remove'}}" class=" ml-5 shadow rounded col-3 text-center bg-danger text-white col-3"><i class="fas fa-trash-alt"></i></a>
+        <a href="{{env.base_path ~ 'users/' ~ user.id ~ '/delete'}}" class=" ml-5 shadow rounded col-3 text-center bg-danger text-white col-3"><i class="fas fa-trash-alt"></i></a>
     </li>
     {% endfor %}
 </ul>
