--- a/template/cars/new.html.twig
+++ b/template/cars/new.html.twig
@@ -1,20 +1,23 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-        Voitures
+Users
 {% endblock %}
 {% block content %}
-        <form action="{{env.base_path  ~ '/cars'}}" method="post">
+<form action="{{env.base_path  ~ '/cars/'}}" method="post">
 
-            <div class="form-group">
-                <label class="FormBrand" for="brand">Marque</label>
-                <input name="Brand" type="text">
-            </div>
-            <div  class="form-group">
-                <label class="FormModel" for="">Modèle</label>
-                <input name="Model" type="text">
-            </div>
+    <div class="form-group">
+        <label class="FormBrand" for="Brand">Brand</label>
+        <input name="Brand" type="text">
+    </div>
+    <div class="form-group">
+        <label class="FormModel" for="Model">Model</label>
+        <input name="Model" type="text">
+    </div>
 
-            <button class="btn btn-success" type="reset" >Envoie</button>
-        </form>
-        
+    <button class="btn btn-success" type="submit">Send</button>
+</form>
+<div class="btn btn-primary rounded">
+    <a href="{{ env.base_path ~ '/cars/' }}" class="text-white">Home</a>
+</div>
+
 {% endblock %}
