--- a/template/users/index.html.twig
+++ b/template/users/index.html.twig
@@ -5,13 +5,13 @@ Users
 {% block content %}
 <ul class='list-group text-center col-5 ml-auto mr-auto'>
     {% for user in users %}
-    <li class='list-group-item border deep-purple-text'>
+    <li class='list-group-item border deep-purple-text d-flex justify-content-between'>
         <a href="{{env.base_path }}users/{{user.id}} " class='text-dark'>{{user.firstname}} {{user.lastname}}</a>
-        <a href="{{env.base_path ~ 'users/' ~ user.id ~ '/delete'}}" class=" ml-5 shadow rounded col-3 text-center bg-danger text-white col-3"><i class="fas fa-trash-alt"></i></a>
+        <a href="{{env.base_path ~ 'users/' ~ user.id ~ '/delete'}}" class="text-danger"><i class="fas fa-trash-alt"></i></a>
     </li>
     {% endfor %}
 </ul>
-<div class="deep-purple darken-4 ml-auto mr-auto text-center col-1 mt-5 rounded ">
-    <a href="{{ env.base_path ~ '/users/new' }}" class="text-white"><i class="fas fa-plus"></i></a>
+<div class="text-center mt-5 " >
+    <a href="{{ env.base_path ~ '/users/new' }}" class="text-secondary"><i class="fas fa-plus"> ADD </i></a>
 </div>
 {% endblock %}
